# opencv_image_processing

./: .gitignore  CMakeLists.txt  main.cpp
lib/: image.h
src/: CMakeLists.txt  binarization.cpp  filter.cpp  histogram.cpp  image.h  imageIO.cpp  transformation.cpp
